--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,13 @@ body {
 
 /* 상단 영역 */
 .header {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10.9rem;
     display: block;
+    margin: 0 auto;
     z-index: 999;
 
 }
@@ -217,7 +222,7 @@ body {
     float: left;
     width: 6.5rem;
     height: 4.7rem;
-    background: url(../images/h_logo.png) no-repeat center;
+    background: url('../images/h_logo.png') no-repeat center;
     font-size: 0;
 }
 
@@ -282,7 +287,7 @@ body {
     display: block;
     width: 3rem;
     height: 3rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
     font-size: 0;
 }
 
@@ -301,16 +306,39 @@ body {
 /* 비주얼 영역 */
 .visual {
     position: relative;
+    padding-top: 10.9rem;
+}
+
+.visual-img {
+    position: relative;
     display: block;
+    width: 160rem;
     height: 56rem;
     overflow: hidden;
-    background: url(../images/visual_1.jpg) no-repeat center;
+    margin: 0 auto;
+}
+
+.sw-visual{
+    width: 160rem;
+    height: 56rem;
+}
+
+.sw-visual-pg {
+    bottom: 10rem;
+    left: 130rem;
+    width: 5.2rem;
+    height: 3.4rem;
+    line-height: 3.4rem;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 5.2rem;
 }
 
 /* 고객정보 영역 */
 .customer {
     position: relative;
     display: block;
+    z-index: 9;
 }
 
 .customer>.container {
@@ -342,7 +370,85 @@ body {
     overflow: hidden;
     width: 46rem;
     height: 10rem;
-    background: #8fcb64;
+}
+
+.sw-cu{
+    width: 46rem;
+    height: 10rem;
+}
+
+.sw-cu .swiper-slide{
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 1rem 0;
+}
+
+.cu-1{
+    content: '';
+    position: relative;
+    display: block;
+    width: 4.5rem;
+    height: 4rem;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
+    background-position: -1.5rem -8.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+}
+
+.cu-2{
+    content: '';
+    position: relative;
+    display: block;
+    width: 4.5rem;
+    height: 4rem;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
+    background-position: -7rem -8.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+}
+.cu-3{
+    content: '';
+    position: relative;
+    display: block;
+    width: 4.5rem;
+    height: 4rem;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
+    background-position: -12.1rem -8.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+}
+.cu-4{
+    content: '';
+    position: relative;
+    display: block;
+    width: 4.5rem;
+    height: 4rem;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
+    background-position: -17.5rem -8.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+}
+.cu-5{
+    content: '';
+    position: relative;
+    display: block;
+    width: 4.5rem;
+    height: 4rem;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
+    background-position: -57.1rem -8.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+}
+.cu-6{
+    content: '';
+    position: relative;
+    display: block;
+    width: 4.5rem;
+    height: 4rem;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
+    background-position: -62rem -8.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
 }
 
 .customer-login {
@@ -501,7 +607,7 @@ body {
     display: block;
     width: 2.7rem;
     height: 2.3rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
     background-position: -25rem -1rem;
 }
 
@@ -528,7 +634,7 @@ body {
     display: inline-block;
     width: 3rem;
     height: 3rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
     background-position: -67.4rem -8rem;
 
     vertical-align: -0.7rem;
@@ -580,7 +686,7 @@ body {
     transform: translateY(-50%);
     width: 0.7rem;
     height: 1.3rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
     background-position: -25.1rem -5rem;
 }
 
@@ -614,7 +720,7 @@ body {
     display: inline-block;
     width: 1.4rem;
     height: 1.5rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
     background-position: -17.6rem -5rem;
     vertical-align: -0.1rem;
     margin-left: 0.5rem;
@@ -625,7 +731,7 @@ body {
     display: inline-block;
     width: 1.4rem;
     height: 1.5rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
     background-position: -22.7rem -5rem;
     vertical-align: -0.1rem;
     margin-left: 0.5rem;
@@ -810,7 +916,7 @@ body {
     display: inline-block;
     width: 0.7rem;
     height: 1rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
     background-position: -26.8rem -5rem;
     margin-left: 0.7rem;
 }
@@ -844,7 +950,7 @@ body {
     display: inline-block;
     width: 5.8rem;
     height: 5.4rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
 }
 
 .faq-box:nth-child(1)>a::before {
@@ -870,9 +976,9 @@ body {
     top: 3.4rem;
     left: 9.8rem;
     display: block;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     color: #333;
-    font-weight: 400;
+    font-weight: 300;
     letter-spacing: -0.05rem;
     line-height: 1.4;
 
@@ -941,8 +1047,8 @@ body {
     position: relative;
     display: inline-block;
     width: 0.7rem;
-    height: 0.1rem;
-    background: url(../images/ico_sprite_pc.png) no-repeat;
+    height: 1rem;
+    background: url('../images/ico_sprite_pc.png') no-repeat;
     background-position: -26.8rem -5rem;
     margin-left: 0.7rem;
 }
