--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,60 @@ body {
     display: block;
 }
 
+/* 모달창 */
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 99999;
+}
+
+.modal-cont {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 35rem;
+    height: 12rem;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5rem;
+}
+
+.modal-close {
+    position: absolute;
+    right: 1rem;
+    bottom: 1rem;
+    width: 4.5rem;
+    height: 2rem;
+    background-color: #fff;
+    color: rgb(111, 35, 249);
+    font-size: 1rem;
+    font-weight: 300;
+    cursor: pointer;
+    border: 0.1rem solid rgb(111, 35, 249);
+    border-radius: 0.2rem;
+    transition: all 0.2s;
+}
+
+.modal-close:hover {
+    color: #fff;
+    background-color: rgb(111, 35, 249);
+}
+
+.modal-show {
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #222;
+    text-align: center;
+    line-height: 2;
+}
+
 /* 상단 영역 */
 .header {
     position: fixed;
@@ -318,7 +372,7 @@ body {
     margin: 0 auto;
 }
 
-.sw-visual{
+.sw-visual {
     width: 160rem;
     height: 56rem;
 }
@@ -372,90 +426,76 @@ body {
     height: 10rem;
 }
 
-.sw-cu{
+.sw-cs {
     width: 46rem;
     height: 10rem;
 }
 
-.sw-cu .swiper-slide{
+.sw-cs .swiper-slide {
     text-align: center;
-    font-size: 1.5rem;
     padding: 1rem 0;
 }
 
-.cu-1{
-    content: '';
-    position: relative;
-    display: block;
-    width: 4.5rem;
-    height: 4rem;
-    background: url('../images/ico_sprite_pc.png') no-repeat;
-    background-position: -1.5rem -8.5rem;
-    margin: 0 auto;
-    margin-bottom: 1rem;
+.sw-cs p {
+    font-size: 1.5rem;
 }
 
-.cu-2{
+.customer-img {
     content: '';
     position: relative;
     display: block;
-    width: 4.5rem;
+    width: 3.5rem;
     height: 4rem;
     background: url('../images/ico_sprite_pc.png') no-repeat;
+    margin: 1rem auto;
+}
+
+.cs-1 {
+    background-position: -1.5rem -8.5rem;
+}
+
+.cs-2 {
     background-position: -7rem -8.5rem;
-    margin: 0 auto;
-    margin-bottom: 1rem;
 }
-.cu-3{
-    content: '';
-    position: relative;
-    display: block;
-    width: 4.5rem;
-    height: 4rem;
-    background: url('../images/ico_sprite_pc.png') no-repeat;
+
+.cs-3 {
+    width: 4rem;
     background-position: -12.1rem -8.5rem;
-    margin: 0 auto;
-    margin-bottom: 1rem;
 }
-.cu-4{
-    content: '';
-    position: relative;
-    display: block;
-    width: 4.5rem;
-    height: 4rem;
-    background: url('../images/ico_sprite_pc.png') no-repeat;
+
+.cs-4 {
+    width: 4rem;
     background-position: -17.5rem -8.5rem;
-    margin: 0 auto;
-    margin-bottom: 1rem;
 }
-.cu-5{
-    content: '';
-    position: relative;
-    display: block;
-    width: 4.5rem;
-    height: 4rem;
-    background: url('../images/ico_sprite_pc.png') no-repeat;
-    background-position: -57.1rem -8.5rem;
-    margin: 0 auto;
-    margin-bottom: 1rem;
+
+.cs-5 {
+    background-position: -57.1rem -8.4rem;
 }
-.cu-6{
-    content: '';
-    position: relative;
-    display: block;
+
+.cs-6 {
     width: 4.5rem;
-    height: 4rem;
-    background: url('../images/ico_sprite_pc.png') no-repeat;
     background-position: -62rem -8.5rem;
-    margin: 0 auto;
-    margin-bottom: 1rem;
+}
+
+.sw-cs-pg {
+    top: 0;
+    right: 0;
+    margin-left: 21.5rem;
+}
+
+.sw-cs-pg .swiper-pagination-bullet {
+    background-color: #ddd !important;
+    opacity: 1 !important;
+}
+
+.sw-cs-pg .swiper-pagination-bullet-active {
+    background-color: #47ad1a !important;
 }
 
 .customer-login {
     position: relative;
     display: block;
     padding-right: 21rem;
-
     font-size: 3.2rem;
     font-weight: 400;
     line-height: 1.375;
